Add support for multiple ceph clusters

--- a/ceph-client-setup/secret.xml.j2
+++ b/ceph-client-setup/secret.xml.j2
@@ -1,6 +1,6 @@
 <secret ephemeral='no' private='no'>
   <uuid>{{ libvirt_secret_uuid }}</uuid>
   <usage type='ceph'>
-    <name>client.cinder secret</name>
+    <name>client.cinder{% if cluster_name != "ceph" %}-{{ cluster_name }}{% endif %} secret</name>
   </usage>
 </secret>
